--- a/src/css/sections.css
+++ b/src/css/sections.css
@@ -10,7 +10,7 @@ main {
     justify-content: center;
     text-align: center;
     color: var(--light-color);
-    background: url("./bg/bg-main.jpg") no-repeat center center/cover !important;
+    background: url("/bg/bg-main.jpg") no-repeat center center/cover;
     padding: 40px 0;
 }
 
